--- a/package.json
+++ b/package.json
@@ -51,30 +51,29 @@
 	},
 	"devDependencies": {
 		"@types/jest": "^29.5.14",
-		"@types/node": "^24.0.13",
+		"@types/node": "^22.15.21",
 		"@types/ws": "^8.18.1",
-		"@typescript-eslint/parser": "~8.36",
+		"@typescript-eslint/parser": "~8.35.1",
 		"eslint": "^8.57.1",
 		"eslint-plugin-n8n-nodes-base": "^1.16.3",
 		"glob": "^11.0.3",
 		"gulp": "^5.0.1",
 		"jest": "^29.7.0",
 		"prettier": "^3.6.2",
-		"ts-jest": "^29.4.0",
+		"ts-jest": "^29.2.6",
 		"typescript": "^5.8.3"
 	},
 	"dependencies": {
 		"@langchain/core": "0.3.43",
-		"@modelcontextprotocol/sdk": "^1.15.1",
+		"@modelcontextprotocol/sdk": "^1.15.0",
 		"form-data": "^4.0.4",
 		"protobufjs": "^7.5.3",
 		"ws": "^8.18.3",
-		"zod": "3.24.0",
+		"zod": "^3.25.76",
 		"zod-to-json-schema": "^3.24.6"
 	},
 	"overrides": {
-		"pkce-challenge": "3.0.0",
-		"zod": "3.24.0"
+		"pkce-challenge": "3.0.0"
 	},
 	"peerDependencies": {
 		"n8n-workflow": "*"
