--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "n8n-nodes-feishu-lark",
+	"name": "n8n-nodes-feishu-fork",
 	"version": "0.6.3",
 	"description": "n8n custom nodes for n8n to interact with Feishu/Lark, including Lark Bot, Lark MCP, and Lark Trigger.",
 	"keywords": [
@@ -13,14 +13,14 @@
 		"feishu-bot"
 	],
 	"license": "MIT",
-	"homepage": "https://github.com/zhgqthomas/n8n-nodes-feishu-lark#readme",
+	"homepage": "https://github.com/mingjiezxc/n8n-nodes-feishu-fork.git#readme",
 	"author": {
 		"name": "zhgqthomas",
 		"email": "zhgqthomas@outlook.com"
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/zhgqthomas/n8n-nodes-feishu-lark.git"
+		"url": "git+https://github.com/mingjiezxc/n8n-nodes-feishu-fork.git.git"
 	},
 	"engines": {
 		"node": ">=20.15"
