--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
 	},
 	"devDependencies": {
 		"@types/jest": "^29.5.14",
+		"@types/luxon": "^3.7.1",
 		"@types/node": "^22.15.21",
+		"@types/sanitize-html": "^2.16.0",
 		"@types/ws": "^8.18.1",
 		"@typescript-eslint/parser": "~8.35.1",
 		"eslint": "^8.57.1",
@@ -68,7 +70,10 @@
 		"@langchain/core": "0.3.43",
 		"@modelcontextprotocol/sdk": "^1.15.1",
 		"form-data": "^4.0.4",
+		"isbot": "^5.1.30",
+		"luxon": "^3.7.1",
 		"protobufjs": "^7.5.3",
+		"sanitize-html": "^2.17.0",
 		"ws": "^8.18.3",
 		"zod": "^3.24.1",
 		"zod-to-json-schema": "^3.24.6"
