--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,13 +29,13 @@ jobs:
         run: npm ci
 
       - name: Lint
-        run: npm run lint --if-present || echo "Linting failed but continuing"
+        run: npm run lint --if-present
 
       - name: Build
-        run: npm run build --if-present || echo "Build script not found or build failed but continuing"
+        run: npm run build --if-present
 
       - name: Test
-        run: npm run test --if-present || echo "No tests found or tests failed but continuing"
+        run: npm run test --if-present
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
