--- a/package.json
+++ b/package.json
@@ -67,22 +67,22 @@
 		"typescript": "^5.8.3"
 	},
 	"dependencies": {
-		"@langchain/core": "0.3.43",
-		"@modelcontextprotocol/sdk": "^1.15.1",
 		"crypto": "^1.0.1",
-		"form-data": "^4.0.4",
-		"isbot": "^5.1.30",
-		"luxon": "^3.7.1",
-		"protobufjs": "^7.5.3",
-		"sanitize-html": "^2.17.0",
-		"ws": "^8.18.3",
-		"zod": "^3.24.1",
-		"zod-to-json-schema": "^3.24.6"
+		"protobufjs": "^7.5.3"
 	},
 	"overrides": {
-		"pkce-challenge": "3.0.0"
+		"pkce-challenge": "4.0.0"
 	},
 	"peerDependencies": {
-		"n8n-workflow": "*"
+		"n8n-workflow": "*",
+		"@langchain/core": "*",
+		"luxon": "*",
+		"zod": "*",
+		"@modelcontextprotocol/sdk": "*",
+		"zod-to-json-schema": "*",
+		"ws": "*",
+		"form-data": "*",
+		"isbot": "*",
+		"sanitize-html": "*"
 	}
 }
