--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
 		"n8nNodesApiVersion": 1,
 		"credentials": [
 			"dist/credentials/LarkTokenApi.credentials.js",
-			"dist/credentials/LarkOAuth2Api.credentials.js"
+			"dist/credentials/LarkOAuth2Api.credentials.js",
+			"dist/credentials/LarkMcpOAuth2Api.credentials.js"
 		],
 		"nodes": [
 			"dist/nodes/Lark/Lark.node.js",
