--- a/package.json
+++ b/package.json
@@ -47,15 +47,14 @@
 		],
 		"nodes": [
 			"dist/nodes/Lark/Lark.node.js",
-			"dist/nodes/Lark/LarkTrigger.node.js",
-			"dist/nodes/Lark/LarkMcp.node.js"
+			"dist/nodes/Lark/LarkTrigger.node.js"
 		]
 	},
 	"devDependencies": {
 		"@types/jest": "^29.5.14",
-		"@types/luxon": "^3.7.1",
+		"@types/luxon": "^3.4.2",
 		"@types/node": "^22.15.21",
-		"@types/sanitize-html": "^2.16.0",
+		"@types/sanitize-html": "^2.11.0",
 		"@types/ws": "^8.18.1",
 		"@typescript-eslint/parser": "~8.35.1",
 		"eslint": "^8.57.1",
@@ -76,14 +75,14 @@
 	},
 	"peerDependencies": {
 		"n8n-workflow": "*",
-		"@langchain/core": "*",
-		"luxon": "*",
-		"zod": "*",
-		"@modelcontextprotocol/sdk": "*",
-		"zod-to-json-schema": "*",
 		"ws": "*",
-		"form-data": "*",
-		"isbot": "*",
-		"sanitize-html": "*"
+		"@langchain/core": "0.3.68",
+		"luxon": "3.4.4",
+		"@modelcontextprotocol/sdk": "1.12.0",
+		"zod": "3.25.67",
+		"zod-to-json-schema": "3.23.3",
+		"form-data": "4.0.4",
+		"isbot": "3.6.13",
+		"sanitize-html": "2.12.1"
 	}
 }
