--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"@types/luxon": "^3.4.2",
 		"@types/node": "^22.15.21",
 		"@types/sanitize-html": "^2.11.0",
+		"@types/uuid": "^10.0.0",
 		"@types/ws": "^8.18.1",
 		"@typescript-eslint/parser": "~8.35.1",
 		"eslint": "^8.57.1",
@@ -83,6 +84,7 @@
 		"zod-to-json-schema": "3.23.3",
 		"form-data": "4.0.4",
 		"isbot": "3.6.13",
-		"sanitize-html": "2.12.1"
+		"sanitize-html": "2.12.1",
+		"uuid": "10.0.0"
 	}
 }
