--- a/package.json
+++ b/package.json
@@ -69,22 +69,22 @@
 	},
 	"dependencies": {
 		"crypto": "^1.0.1",
-		"protobufjs": "^7.5.3"
+		"protobufjs": "^7.5.3",
+		"ws": "^8.18.3",
+		"@langchain/core": "^0.3.73",
+		"luxon": "^3.7.1",
+		"@modelcontextprotocol/sdk": "^1.17.5",
+		"zod": "3.25.67",
+		"zod-to-json-schema": "3.23.3",
+		"form-data": "^4.0.4",
+		"isbot": "^5.1.30",
+		"sanitize-html": "^2.17.0",
+		"uuid": "^11.1.0"
 	},
 	"overrides": {
 		"pkce-challenge": "4.0.0"
 	},
 	"peerDependencies": {
-		"n8n-workflow": "*",
-		"ws": "*",
-		"@langchain/core": "0.3.68",
-		"luxon": "3.4.4",
-		"@modelcontextprotocol/sdk": "1.12.0",
-		"zod": "3.25.67",
-		"zod-to-json-schema": "3.23.3",
-		"form-data": "4.0.4",
-		"isbot": "3.6.13",
-		"sanitize-html": "2.12.1",
-		"uuid": "10.0.0"
+		"n8n-workflow": "*"
 	}
 }
