--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
 		"luxon": "^3.7.1",
 		"@modelcontextprotocol/sdk": "^1.17.5",
 		"zod": "3.25.67",
-		"zod-to-json-schema": "3.23.3",
+		"zod-to-json-schema": "^3.24.6",
 		"form-data": "^4.0.4",
 		"isbot": "^5.1.30",
 		"sanitize-html": "^2.17.0",
